--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,9 +1,9 @@
 pipeline{
-agentany
+    agentany
     stages{
         stage('checkoutcode'){
             steps{
-                git url: 'https://github.com/reddyvarisrinu95/srinivasapp.git', branch: 'master'
+                git clone 'https://github.com/reddyvarisrinu95/srinivasapp.git',branch: 'master'
             }
         stage('build'){
             steps{
