--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline{
     stages{
         stage('checkoutcode'){
             steps{
-                git clone 'https://github.com/reddyvarisrinu95/srinivasapp.git',branch: 'master'
+                git clone "git@github.com:reddyvarisrinu95/srinivasapp.git"
             }
         stage('build'){
             steps{
